# PAIlib

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  README_EN.md  pyproject.toml  ruff.toml
.github/: release-drafter.yml
.github/workflows/: codecov.yml  poetry-publish.yml  pytest-ci.yml  release-drafter.yml  release.yml
docs/: 20251229.md  Glossary.md  Table-of-Terms.md
paicorelib/: __init__.py  coordinate.py  core_defs.py  core_defs_v2.py  core_model.py  core_model_v2.py  float_codec.py  hw_defs.py  hw_types.py  neuron_defs.py  neuron_defs_v2.py  neuron_model.py  neuron_model_v2.py  ram_defs.py  ram_model.py  ram_types.py  reg_defs.py  reg_model.py  reg_types.py  routing_defs.py  routing_hexa.py  utils.py
paicorelib/framelib/: __init__.py  base.py  frame_defs.py  frame_gen.py  frame_gen_v2.py  frames.py  types.py  utils.py
src/paicorelib/: __init__.py  _logging.py  coordinate.py  core_defs.py  core_defs_v2.py  core_model.py  core_model_v2.py  hw_defs.py  neuron_defs.py  neuron_defs_v2.py  neuron_model.py  neuron_model_v2.py  routing_hexa.py  utils.py
src/paicorelib/framelib/: __init__.py  base.py  frame_defs.py  frame_gen_v2.py  parser_v2.py  types.py  utils.py
tests/: conftest.py  test_coordinate.py  test_core_model.py  test_core_model_v2.py  test_float_codec.py  test_hw_types.py  test_init.py  test_neuron_model.py  test_neuron_model_v2.py  test_ram_model.py  test_reg_model.py  test_reg_types.py  test_routing_defs.py  test_routing_hexa.py  test_versions.py  utils.py
tests/debug/: ram_model_LIF_0.json  ram_model_LIF_17.json  ram_model_LIF_19.json  ram_model_LIF_4.json  ram_model_dest.json  reg_model_0.json  reg_model_1.json
tests/framelib/: conftest.py  gen_test_data.py  gen_testcase.py  test_base.py  test_frame_gen_v2.py  test_frames.py  test_frames_v2.py  test_parser_v2.py  test_utils.py
