[project]
name = "paicorelib"
version = "2.0.0a1"
description = "Library of PAICORE"
authors = [{ name = "Ziru Pan", email = "zrpan@stu.pku.edu.cn" }]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.0,<3.0.0; platform_machine != 'armv7l'",
    "numpy==1.26.4; platform_machine == 'armv7l'",
    "pydantic>=2.10.0,<3.0.0",
]
maintainers = [
    { name = "Siyuan Gao", email = "siyuan-gao@outlook.com" },
    { name = "Hongjian Wen", email = "221900303@smail.nju.edu.cn" },
    { name = "Zhaoyang Hao", email = "hzyang2218@gmail.com" },
    { name = "Ziru Pan", email = "zrpan@stu.pku.edu.cn" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
keywords = ["PAIlib", "PAICORE", "neuromorphic-chip", "brain-inspired-ai"]

[project.urls]
repository = "https://github.com/PAICookers/PAIlib"
homepage = "https://github.com/PAICookers/PAIlib"
documentation = "https://github.com/PAICookers/PAIlib#readme"

[tool.poetry]
packages = [{ include = "paicorelib" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=7.0", "pytest-md>=0.2"]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uv]
package = true
python-preference = "system"

[tool.uv.build-backend]
module-name = "paicorelib"
module-root = ""

[tool.pytest.ini_options]
minversion = "8.0.0"
testpaths = ["tests"]
addopts = "--cov=paicorelib --cov-branch --cov-report=term"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # Pyflakes
    "I", # isort
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "I001", # unsorted imports
]
'paicorelib/__init__.py' = [
    "E402", # module level import not at top of cell
    "F401", # unused import
]
