[project]
name = "paicorelib"
version = "2.0.0b3"
description = "Library of PAICORE"
authors = [{ name = "Ziru Pan", email = "zrpan@stu.pku.edu.cn" }]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.0,<3.0.0; python_version < '3.14' and platform_machine != 'armv7l'",
    "numpy>=2.3.5,<3.0.0; python_version >= '3.14' and platform_machine != 'armv7l'",
    "numpy==1.26.4; platform_machine == 'armv7l'",
    "pydantic>=2.10.0,<3.0.0",
]
maintainers = [
    { name = "Siyuan Gao", email = "siyuan-gao@outlook.com" },
    { name = "Hongjian Wen", email = "221900303@smail.nju.edu.cn" },
    { name = "Zhaoyang Hao", email = "hzyang2218@gmail.com" },
    { name = "Ziru Pan", email = "zrpan@stu.pku.edu.cn" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
keywords = ["PAIlib", "PAICORE", "neuromorphic-chip", "brain-inspired-ai"]

[project.urls]
repository = "https://github.com/PAICookers/PAIlib"
homepage = "https://github.com/PAICookers/PAIlib"
documentation = "https://github.com/PAICookers/PAIlib#readme"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[dependency-groups]
dev = ["pytest>=9.0", "pytest-cov>=7.0", "pytest-md>=0.2"]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uv]
python-preference = "system"

[tool.pytest]
minversion = "9.0"
testpaths = ["tests"]
addopts = ["-ra"]
